--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     />
     <!-- <link rel="preload" href="/font/Inter-italic.var.woff2" as="font" type="font/woff2" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/font/inter.css" />
+    <script
+      src="https://kit.fontawesome.com/e0817e2088.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body class="">
