--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     ></script>
   </head>
 
-  <body class="">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
