--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <!-- <link rel="preload" href="/font/Inter-italic.var.woff2" as="font" type="font/woff2" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/font/inter.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Quicksand:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600&family=Updock&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://kit.fontawesome.com/e0817e2088.js"
       crossorigin="anonymous"
